--- a/_posts/2019-05-17-Arduino 1.8.9 和 VS code兼容乱码问题.md
+++ b/_posts/2019-05-17-Arduino 1.8.9 和 VS code兼容乱码问题.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Arduino 1.8.9 和 VS code兼容乱码问题"
 date:   2019-05-17 20:12
-categories: Arduino&VS code
+categories: Visual Studio Code
 ---
  
  近期Arduino推出了新版本1.8.9，兴奋的去官网进行了升级替换了老版本1.8.8。然后问题出现了：
