--- a/_posts/2019-08-04-Arduino可穿戴运动监测设备 .md
+++ b/_posts/2019-08-04-Arduino可穿戴运动监测设备 .md
@@ -36,7 +36,8 @@ const int accelZ = 4;                  // z-axis pin (only on 3-axis models)
 
 更具 [ADI官方资料](https://www.analog.com/cn/analog-dialogue/articles/pedometer-design-3-axis-digital-acceler.html) 我们知道：无论如何穿戴计步器，总有至少一个轴具有相对较大的周期性加速度变化，那么我们就可以从这里着手，进行数据分析，判断步伐。
 
-![ADX运动数据]( /images/Posts/20190804行走三轴数据.png)  
+![ADX运动数据]( /images/Posts/20190804行走三轴数据.png)
+-> 图1 ADX官方运动数据 <-
 
 ### 算法
 
