修改文件: _posts/2019-9-3-test测试.md

--- a/_posts/2019-9-3-test测试.md
+++ b/_posts/2019-9-3-test测试.md
@@ -12,8 +12,10 @@ categories:  HTML&CSS
 [链接](www.google.com)
 
 图片
-![图片](./images/1567487979672.png)
+![图片](/images/1567487979672.png)
+
+![图片](./1567487979672.png)
+
 
 ![enter description here](https://www.github.com/LonlyPan/blog_images/raw/master/post/1567488981167.png)
 
-![enter description here](https://www.github.com/LonlyPan/blog_images/raw/master/post/图片.png)
