修改文件: _posts/2019-9-3-test测试.md

--- a/_posts/2019-9-3-test测试.md
+++ b/_posts/2019-9-3-test测试.md
@@ -12,10 +12,8 @@ categories:  HTML&CSS
 [链接](www.google.com)
 
 图片
-![图片](/images/1567487979672.png)
 
-![图片](./1567487979672.png)
+[链接2](https://www.google.com)
 
-[链接2](www.google.com)
-
+![enter description here](https://www.github.com/LonlyPan/blog_images/raw/master/post/avator.ico)
 
