修改文件: _posts/2019-9-3-test测试.md

--- a/_posts/2019-9-3-test测试.md
+++ b/_posts/2019-9-3-test测试.md
@@ -9,11 +9,11 @@ categories:  HTML&CSS
 
 正文
 
-[链接](www.google.com)
+[链接](www.baidu.com)
 
 图片
 
-[链接2](https://www.google.com)
+[链接2](https://www.baidu.com)
 
 ![enter description here](https://www.github.com/LonlyPan/blog_images/raw/master/post/avator.ico)
 
