--- a/_posts/2019-9-3-未命名文件.md
+++ b/_posts/2019-9-3-未命名文件.md
@@ -11,3 +11,5 @@ test
 ![enter description here](https://www.github.com/LonlyPan/blog_images/raw/master/post/1567489948643.png)
 
 ![enter description here](./images/1567490079913.png)
+
+![enter description here](./images /Posts/1567490216476.png)
