--- a/_posts/2019-9-3-未命名文件.md
+++ b/_posts/2019-9-3-未命名文件.md
@@ -10,6 +10,7 @@ test
 
 ![enter description here](https://www.github.com/LonlyPan/blog_images/raw/master/post/1567489948643.png)
 
-![enter description here](./images /1567490603566.png
 
-![enter description here](./images /1567490705751.png)
+![1](./images /1567490705751.png)
+
+![4](/_post/images /1567490705751.png)
