修改文件: _posts/2019-9-3-未命名文件.md

--- a/_posts/2019-9-3-未命名文件.md
+++ b/_posts/2019-9-3-未命名文件.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "2019-9-3-未命名文件"
+title: "2019-9-3-test"
 data: 2019-9-3 13:51
 categories:  HTML&CSS
 ---
@@ -10,10 +10,4 @@ test
 
 ![enter description here](https://www.github.com/LonlyPan/blog_images/raw/master/post/1567489948643.png)
 
-
-![1](./images /1567490705751.png)
-
-![4](/_posts/images /1567490705751.png)
-
-
-![enter description here](./images /1567491236626.png)
+![enter description here](https://www.github.com/LonlyPan/blog_images/raw/master/2019-9-3-未命名文件/1567491467745.png)
