修改文件: _posts/2019-9-3-未命名文件.md

--- a/_posts/2019-9-3-未命名文件.md
+++ b/_posts/2019-9-3-未命名文件.md
@@ -17,5 +17,7 @@ categories:  HTML&CSS
 
 数据存储直接链接的我的github博客的文档库，那么每次保存时，就直接保存再我指定的github的文件夹中，直接云存储，随写随看。
 
-图床存储其实和数据存储一样
+图床存储和数据存储一样
+
+![小书匠绑定第三方数据](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/2019-9-3-图片测试1567493329599.png)
 
