修改文件: _posts/2019-9-3-图片测试.md

--- a/_posts/2019-9-3-图片测试.md
+++ b/_posts/2019-9-3-图片测试.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "2019-9-3-图片测试"
+title: "2019-9-3-小书匠绑定第三方数据库"
 data: 2019-9-3 13:51
 categories:  HTML&CSS
 ---
@@ -19,5 +19,5 @@ categories:  HTML&CSS
 
 图床存储和数据存储一样
 
-![小书匠绑定第三方数据](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/2019-9-3-图片测试1567493329599.png)
+![enter description here](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/2019-9-3-图片测试/1567493905060.png)
 
