修改文件: _posts/2019-9-3-小书匠绑定第三方数据库.md

--- a/_posts/2019-9-3-小书匠绑定第三方数据库.md
+++ b/_posts/2019-9-3-小书匠绑定第三方数据库.md
@@ -19,5 +19,5 @@ categories:  HTML&CSS
 
 图床存储和数据存储一样
 
-![enter description here](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/2019-9-3-图片测试/1567493905060.png)
+![小书匠绑定第三方数据库](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/2019-9-3-小书匠绑定第三方数据库/1567493980802.png)
 
