修改文件: _posts/2019-9-3-小书匠绑定第三方数据库.md

--- a/_posts/2019-9-3-小书匠绑定第三方数据库.md
+++ b/_posts/2019-9-3-小书匠绑定第三方数据库.md
@@ -15,7 +15,7 @@ categories:  HTML&CSS
 ## 解决方法：
 好在小书匠存储设置可以链接到外部地址，单独设置数据存储和图床存储位置
 
-数据存储直接链接的我的github博客的文档库，那么每次保存时，就直接保存再我指定的github的文件夹中，直接云存储，随写随看。
+数据存储直接链接到博客的github的文档库，那么每次保存时，就直接保存在github的文件夹中，直接云存储，随写随看。
 
 图床存储和数据存储一样
 
