修改文件: _posts/2019-9-3-小书匠绑定第三方数据库.md

--- a/_posts/2019-9-3-小书匠绑定第三方数据库.md
+++ b/_posts/2019-9-3-小书匠绑定第三方数据库.md
@@ -21,3 +21,11 @@ categories:  HTML&CSS
 
 ![小书匠绑定第三方数据库](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/2019-9-3-小书匠绑定第三方数据库/1567493980802.png)
 
+## 问题
+* 当你写好保存后，然后修改了软件端文档名（文件名是软件根据 `title`后的内容生成的），github上的文档名是不会修改的，但你的修改依旧有效（貌似文档名和存储名是分开的）。
+
+* 图片的地址，其实和上面是一个问题，由于我在图片的链接上也加入的 `title`来自动生成与文档同名为的文件夹，以便分类存储图片，但是当我在中途修改文档名后，之前的链接是不变的，后面再继续添加的图片则会保存到你刚新修改的文档同名文件夹下。
+
+一个解决方法就是不保存文档，因为`小书匠`有一个随时存储功能，保证随用随写，随写随走，不用担心数据丢失和断电问题。写完或每天晚上再保存，那时候文档名应该也确定下来了。
+
+
