--- a/_posts/2019-9-3-小书匠绑定第三方数据库.md
+++ b/_posts/2019-9-3-小书匠绑定第三方数据库.md
@@ -2,7 +2,7 @@
 layout: post
 title: "2019-9-3-小书匠绑定第三方数据库"
 data: 2019-9-3 13:51
-categories:  HTML&CSS
+categories:  小书匠
 ---
 
 之前自己写博客文章都是利用`小书匠`软件本地书写，等完成后，再上传到github上，用于博客网页显示。
