--- a/_posts/2019-05-17-彻底删除vscode及安装的插件和个人配置信息.md
+++ b/_posts/2019-05-17-彻底删除vscode及安装的插件和个人配置信息.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "彻底删除vscode及安装的插件和个人配置信息"
 date:   2019-05-17 11:12
-categories: Visual-Studio-Code
+categories: VS Code
 ---
 
 原文在：https://www.cnblogs.com/muou2125/p/10388440.html
