修改文件: _posts/2019-9-3-小书匠绑定第三方数据库.md

--- a/_posts/2019-9-3-小书匠绑定第三方数据库.md
+++ b/_posts/2019-9-3-小书匠绑定第三方数据库.md
@@ -29,3 +29,9 @@ categories:  Blog
 一个解决方法就是不保存文档，因为`小书匠`有一个随时存储功能，保证随用随写，随写随走，不用担心数据丢失和断电问题。写完或每天晚上再保存，那时候文档名应该也确定下来了。
 
 
+
+
+![enter description here](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/2019-9-3-小书匠绑定第三方数据库/1567560024394.png)
+
+
+
