修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -131,20 +131,47 @@ categories:  C/C++
 *
 * @attention
 */
+/* Define to prevent recursive inclusion -------------------------------------*/
+#ifndef __XXX_XX_H
+#define __XXX_XX_H
 
-#ifndef GRAPHICS_H  // 防止graphics.h被重复引用
-#define GRAPHICS_H
- 
+/* just for C/C++ Hybrid Programming*/
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+/* Includes ------------------------------------------------------------------*/
 #include <math.h>       // 引用标准库的头文件
 …
 #include “myheader.h”   // 引用非标准库的头文件
-…
-void Function1(…);  // 全局函数声明
-…
+/* Private types -------------------------------------------------------------*/
 class Box               // 类结构声明
 {
 …
 };
+
+/* Exported types ------------------------------------------------------------*/
+/* Exported constants --------------------------------------------------------*/
+/* Exported variables --------------------------------------------------------*/
+/* Exported macro ------------------------------------------------------------*/
+
+/* Private function prototypes -----------------------------------------------*/
+/* Exported functions --------------------------------------------------------*/
+void Function1(…);  // 全局函数声明
+
+#ifdef __cplusplus
+}
+#endif  /* __cplusplus */
+ 
+#endif /* __XXX_XX_H */
+
+
+ 
+
+…
+
+…
+
 #endif
 
 
@@ -166,20 +193,60 @@ void ADC_DiscModeChannelCountConfig(ADC_TypeDef* ADCx, INT8U_tNumber);
 
 ### 源文件
 
-```c 
+```c++
 /**
-  * @brief    Configures the discontinuousmode for the selected ADC regular group channel.
-  * @param   ADCx: where x can be 1, 2 or 3 toselect the ADC peripheral.
-  * @param   Number: specifies the discontinuousmode regular channel  count value. This number must bebetween 1 and 8.
-  * @retval   None
-  * @par     Modification:修改了********<br>
+  ******************************************************************************
+  * @file              :Air_pressure.c
+  * @Author            :LonlyPan
+  * @brief             :Air pressure process and control
+  ******************************************************************************
+  * @attention
+  *
+  * <h2><center>© Copyright (c) 2019 STMicroelectronics.
+  * All rights reserved.</center></h2>
+  *
+  * This software component is licensed by ST under BSD 3-Clause license,
+  * the "License"; You may not use this file except in compliance with the
+  * License. You may obtain a copy of the License at:
+  *                        opensource.org/licenses/BSD-3-Clause
+  *
+  ******************************************************************************
+  */
+  
+  
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+/* Includes ------------------------------------------------------------------*/
+
+/* Private types -------------------------------------------------------------*/
+/* Private constants ---------------------------------------------------------*/
+/* Private variables ---------------------------------------------------------*/
+/* Private macros ------------------------------------------------------------*/
+
+/* Private function prototypes -----------------------------------------------*/
+/* Exported functions --------------------------------------------------------*/
+
+/* User code -----------------------------------------------------------------*/
+
+#ifdef __cplusplus
+}
+#endif  /* __cplusplus */
+
+
+/**
+  * @brief Configures the discontinuousmode for the selected ADC regular group channel.
+  * @param ADCx: where x can be 1, 2 or 3 toselect the ADC peripheral.
+  * @param  Number: specifies the discontinuousmode regular channel  count value. This number must bebetween 1 and 8.
+  * @retval None
+  * @par   Modification:修改了********<br>
   *                       History
   *          Modified by：***<br>
   *           Date： 2013-10-10
   *          Modification:修改了********<br>
-  *
+  * 注意注释内容对齐，最少空一格，注释语句首字大写。多个参数另起一行写。
   */
-
 void ADC_DiscModeChannelCountConfig(ADC_TypeDef*ADCx, INT8U_t Number)
 {
     赋值语句*********;       /*关键语句的注释           */
@@ -188,9 +255,6 @@ void ADC_DiscModeChannelCountConfig(ADC_TypeDef*ADCx, INT8U_t Number)
 }
 
 ```
-
-
-#### 函数注释
 
 ### 常见单词缩写表
 
