修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -107,18 +107,29 @@ categories:  C/C++
 
 ## 编写示例
 
+```c
+@file             文件名
+@author           作者
+@brief            简要说明
+@param           用于函数说明中，后面接参数名字，然后再接关于该参数的说明
+@return           对函数返回值进行说明
+@note             注解信息
+@attention                  注意信息
+@warning          警告信息
+@see              表示交叉参考
+```
 ### 头文件
 
 ```c
 /**
-* Copyright (c) 2001,上海贝尔有限公司网络应用事业部
+* Copyright (c) 2001,xxxx Inc
 * All rights reserved.
 * 
 * @file      filename.h
 * @brief   见配置管理计划书
 * @author
 * @version  V3.5.0
-* @date    11-March-2014
+* @date    2009/10/16
 *
 * @par     Modification:添加函数，支持********<br>
 *                     History
@@ -222,6 +233,7 @@ extern "C" {
 /* Private types -------------------------------------------------------------*/
 /* Private constants ---------------------------------------------------------*/
 /* Private variables ---------------------------------------------------------*/
+structINNO_HIF_PlatfromFuncs * g_client_funs;  /**< file attribute */ 
 /* Private macros ------------------------------------------------------------*/
 
 /* Private function prototypes -----------------------------------------------*/
@@ -249,11 +261,11 @@ extern "C" {
   *          Modification:修改了********<br>
   * 注意注释内容对齐，最少空一格，注释语句首字大写。多个参数另起一行写。
   */
-void ADC_DiscModeChannelCountConfig(ADC_TypeDef*ADCx, INT8U_t Number)
+void * strcpy(char *dest,const char *src);  // 指针仅作输入用，加const
 {
-    赋值语句*********;       /*关键语句的注释           */
-    语句***********;         /*关键语句的注释格式       */
-    语句*******;             /*实现*****************功能*/
+    赋值语句*********;     /**< file attribute */ 
+    语句***********;        /**< file attribute */ 
+    语句*******;             /**< file attribute */ 
 }
 ```
 
@@ -280,10 +292,6 @@ void ADC_DiscModeChannelCountConfig(ADC_TypeDef*ADCx, INT8U_t Number)
 2、[【读书笔记】-《华为-C语言编程规范》](https://blog.csdn.net/sishuihuahua/article/details/83052267)
 3、[高质量C++/C编程指南](https://www.jianshu.com/p/654fea4bfd4f)
 4、[嵌入式C语言编程规范（个人规约）](https://blog.csdn.net/zhanglianpin/article/details/46544431)
+5、[Google 开源项目风格指南 (中文版)](https://zh-google-styleguide.readthedocs.io/en/latest/)
 
 
-https://zh-google-styleguide.readthedocs.io/en/latest/
-
-[enter description here](chrome-extension://bocbaocobfecmglnmeaeppambideimao/pdf/viewer.html?file=http://d1.amobbs.com/bbs_upload782111/files_44/ourdev_666403R233WN.pdf)
-
-[enter description here](chrome-extension://bocbaocobfecmglnmeaeppambideimao/pdf/viewer.html?file=http://d1.ourdev.cn/bbs_upload782111/files_38/ourdev_630418WOJPW6.pdf)
