修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -107,6 +107,7 @@ categories:  C/C++
 
 ## 编写示例
 
+### 缩写及含义
 ```c
 @file             文件名
 @author           作者
@@ -118,6 +119,7 @@ categories:  C/C++
 @warning          警告信息
 @see              表示交叉参考
 ```
+
 ### 头文件
 
 ```c
