修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -153,22 +153,22 @@ categories:  C/C++
 extern "C" {
 #endif
 
-/* Includes ------------------------------------------------------------------*/
+/* Includes (头文件包含)------------------------------------------------------------------*/
 #include <math.h>       // 引用标准库的头文件
 …
 #include “myheader.h”   // 引用非标准库的头文件
-/* Private types -------------------------------------------------------------*/
+/* Private types（私有类型） -------------------------------------------------------------*/
 class Box               // 类结构声明
 {
 …
 };
 
-/* Exported types ------------------------------------------------------------*/
-/* Exported constants --------------------------------------------------------*/
-/* Exported variables --------------------------------------------------------*/
-/* Exported macro ------------------------------------------------------------*/
+/* Exported types （公开类型）------------------------------------------------------------*/
+/* Exported constants（公开常量） --------------------------------------------------------*/
+/* Exported variables （公开变量）--------------------------------------------------------*/
+/* Exported macro（公开定义） ------------------------------------------------------------*/
 
-/* Exported functions --------------------------------------------------------*/
+/* Exported functions prototypes（公开函数原型）--------------------------------------------------------*/
 void Function1(…);  // 全局函数声明
 
 #ifdef __cplusplus
@@ -210,13 +210,13 @@ extern "C" {
 
 /* Private types -------------------------------------------------------------*/
 /* Private constants ---------------------------------------------------------*/
-/* Private variables ---------------------------------------------------------*/
+/* Private variables（私有变量） ---------------------------------------------------------*/
 structINNO_HIF_PlatfromFuncs * g_client_funs;  /**< file attribute */ 
-/* Private macros ------------------------------------------------------------*/
+/* Private macros（私有定义） ------------------------------------------------------------*/
 
-/* Private function prototypes -----------------------------------------------*/
+/* Private function prototypes （私有函数原型）-----------------------------------------------*/
 
-/* User code -----------------------------------------------------------------*/
+/* User code （代码）-----------------------------------------------------------------*/
 
 #ifdef __cplusplus
 }
