修改文件: _posts/2019-9-4-文档写作规范.md

--- a/_posts/2019-9-4-文档写作规范.md
+++ b/_posts/2019-9-4-文档写作规范.md
@@ -55,9 +55,9 @@ categories:  办公
 
 ## 图片
 
-图片同一存放在文档同级目录下的pic文件夹中（英文文档对应pic-en），如  
+图片统一存放在文档同级目录下的单独文件夹中，如  
 `LITEOS_DOCUMENTS/docs/quick-start/write-standard.md`中使用的图片，统一放置到  
-`LITEOS_DOCUMENTS/docs/quick-start/write-standard.md` 目录下，文档中使用相对路径引用。图片建议根据内容命名，只用数字序列不利于后续图片的继承。
+`LITEOS_DOCUMENTS/docs/quick-start/images` 目录下，文档中使用相对路径引用。图片建议根据内容命名，只用数字序列不利于后续图片的继承。
 
 >**说明**
 引用方式：
@@ -112,8 +112,8 @@ void default {
 ```
 
 ## 参考链接
-1、[ 写作要求](https://liteos.github.io/quick-start/contrb/write-standard.html#%E5%91%BD%E5%90%8D%E8%A7%84%E8%8C%83)，by Huawei LiteOS | 中文网 
-2、[ 一份简明的 Markdown 笔记与教程](https://mazhuang.org/2018/09/06/markdown-intro/)，by 码志 
-3、[技术文档写作规范(Markdown)](https://www.jianshu.com/p/3b638180e42c) ，by Victor_Xu
-4、[中文技术文档的写作规范](https://github.com/ruanyf/document-style-guide)，by 阮一峰
-5、[Google Developer Documentation Style Guide](https://developers.google.com/style/tone)，by google
+1、[ 写作要求](https://liteos.github.io/quick-start/contrb/write-standard.html#%E5%91%BD%E5%90%8D%E8%A7%84%E8%8C%83)，by Huawei LiteOS | 中文网   
+2、[ 一份简明的 Markdown 笔记与教程](https://mazhuang.org/2018/09/06/markdown-intro/)，by 码志   
+3、[技术文档写作规范(Markdown)](https://www.jianshu.com/p/3b638180e42c) ，by Victor_Xu  
+4、[中文技术文档的写作规范](https://github.com/ruanyf/document-style-guide)，by 阮一峰  
+5、[Google Developer Documentation Style Guide](https://developers.google.com/style/tone)，by google  
