--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -134,12 +134,15 @@ categories:  C/C++
 * @date    2009/10/16
 *
 * @par     Modification:添加函数，支持********<br>
-*                     History
+*        History：
 *          Version：V3.0.1 <br>
 *          Author：***<br>
+*          date： 2009/10/16
 *          Modification:添加函数，支持********<br>
+*          
 *          Version：V3.0.0 <br>
 *          Author：***<br>
+*          date： 2009/10/16
 *          Modification:添加函数，支持********<br>
 *
 * @attention
@@ -183,25 +186,29 @@ void Function1(…);  // 全局函数声明
 
 ```c++
 /**
-  *
-  * @file              :Air_pressure.c
-  * @Author            :LonlyPan
-  * @brief             :Air pressure process and control
-  *
-  * @attention
-  *
-  * <h2><center>© Copyright (c) 2019 STMicroelectronics.
-  * All rights reserved.</center></h2>
-  *
-  * This software component is licensed by ST under BSD 3-Clause license,
-  * the "License"; You may not use this file except in compliance with the
-  * License. You may obtain a copy of the License at:
-  *                        opensource.org/licenses/BSD-3-Clause
-  *
-  *
-  */
-  
-  
+* Copyright (c) 2001,xxxx Inc
+* All rights reserved.
+* 
+* @file      filename.c
+* @brief   见配置管理计划书
+* @author
+* @version  V3.5.0
+* @date    2009/10/16
+*
+* @par     Modification:添加函数，支持********<br>
+*        History：
+*          Version：V3.0.1 <br>
+*          Author：***<br>
+*          date： 2009/10/16
+*          Modification:添加函数，支持********<br>
+*          
+*          Version：V3.0.0 <br>
+*          Author：***<br>
+*          date： 2009/10/16
+*          Modification:添加函数，支持********<br>
+*
+* @attention
+*/
 #ifdef __cplusplus
 extern "C" {
 #endif
