--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -43,6 +43,8 @@ categories:  C/C++
 * **除打印类函数外，不要使用可变长参函数**
 * **在源文件范围内声明和定义的所有函数，除非外部可见 ，都应增加static关键字**
 * **不建议使用递归函数调用**
+* 用正确的反义词组命名具有互斥意义的变量或相反动作的函数等
+* 在多重循环中，应将最忙的循环放在最内层
 
 ## 标识符
 * **unix like风格，单词小写，用下划线连接，例如：text_mutex。全局变量大小写混合方式，例如：GetErrMsg**
@@ -66,6 +68,7 @@ categories:  C/C++
 * 初始化变量离使用地方越近越好
 * 明确全局变量初始化顺序
 * **尽量减少没有必要的数据类型默认转换与强制转换**
+* **避免使用 BOOL 参数和NULL**
 
 ## 宏、常量
 * **宏定义表达式时，使用完备的括号**
@@ -84,7 +87,7 @@ categories:  C/C++
 * **注释应放在起代码上方相邻位置或右方**
 * 避免在注释中使用缩写，除非时业界通用或子系统内标准化的缩写
 * **文件头部要注释，建议注释列出：版权说明、版本号、生成日期、作者姓名、功能说明、与其他文件的关系、修改日志等，头文件的注释还应有函数功能的简要说明。**
-。
+* 在程序块的结束行右方加注释标记，以表明某程序块的结束。
 
 ## 排版与格式
 * 程序块采用缩进风格编写，**每级缩进为4格空格**
@@ -236,8 +239,8 @@ structINNO_HIF_PlatfromFuncs * g_client_funs;  /**< file attribute */
 ```c 
 /**
   * @brief Configures the discontinuousmode for the selected ADC regular group channel.
-  * @param ADCx: where x can be 1, 2 or 3 toselect the ADC peripheral.
-  * @param  Number: specifies the discontinuousmode regular channel  count value. This number must bebetween 1 and 8.
+  * @param(in) ADCx: where x can be 1, 2 or 3 toselect the ADC peripheral.
+  * @param(out)  Number: specifies the discontinuousmode regular channel  count value. This number must bebetween 1 and 8.
   * @retval None
   * @par   Modification:修改了********<br>
   *                       History
@@ -248,12 +251,28 @@ structINNO_HIF_PlatfromFuncs * g_client_funs;  /**< file attribute */
   */
 void * strcpy(char *dest,const char *src);  // 指针仅作输入用，加const
 {
-    赋值语句*********;     /**< file attribute */ 
-    语句***********;        /**< file attribute */ 
-    语句*******;             /**< file attribute */ 
+    赋值语句*********;     /* file attribute 不建议使用 “//xxx”*/ 
+    语句***********;        /* file attribute */ 
+    语句*******;             /* file attribute */ 
 }
 ```
 
+### 全局变量
+
+全局变量要有较详细的注释，包括对其功能、取值范围、哪些函数或过程存取它以及
+存取时注意事项等的说明。
+
+```c 
+/* @brif The ErrorCode when SCCP translate */
+/* @value Global Title failure, as follows */ // 变量作用、含义
+/* 0 － SUCCESS 1 － GT Table error */
+/* 2 － GT error Others － no use */ // 变量取值范围
+/* only function SCCPTranslate() in */
+/* this modual can modify it, and other */
+/* module can visit it through call */
+/* the function GetGTTransErrorCode() */ // 使用方法
+BYTE g_GTTranErrorCode;
+```
 ### 常见单词缩写表
 
 |单词|缩写|单词|缩写|
@@ -270,6 +289,21 @@ void * strcpy(char *dest,const char *src);  // 指针仅作输入用，加const
 |  statistic  |  stat  | 	synchronize  | 	syn  |
 |  temp  |  tmp  | 	  | 	   |
 
+### 反义词组
+
+add / remove begin / end create / destroy
+insert / delete first / last get / release
+increment / decrement put / get
+add / delete lock / unlock open / close
+min / max old / new start / stop
+next / previous source / target show / hide
+send / receive source / destination
+cut / paste up / down
+示例：
+int min_sum;
+int max_sum;
+int add_user( BYTE *user_name );
+int delete_user( BYTE *user_name );
 
 ## 参考文档
 
