修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -189,29 +189,29 @@ void Function1(…);  // 全局函数声明
 
 ```c++
 /**
-* Copyright (c) 2001,xxxx Inc
-* All rights reserved.
-* 
-* @file      filename.c
-* @brief   见配置管理计划书
-* @author
-* @version  V3.5.0
-* @date    2009/10/16
-*
-* @par     Modification:添加函数，支持********<br>
-*        History：
-*          Version：V3.0.1 <br>
-*          Author：***<br>
-*          date： 2009/10/16
-*          Modification:添加函数，支持********<br>
-*          
-*          Version：V3.0.0 <br>
-*          Author：***<br>
-*          date： 2009/10/16
-*          Modification:添加函数，支持********<br>
-*
-* @attention
-*/
+  * Copyright (c) 2001,xxxx Inc
+  * All rights reserved.
+  * 
+  * @file    filename.c
+  * @brief   见配置管理计划书
+  * @author  lonlypan
+  * @version  V3.5.0
+  * @date    2009/10/16
+  *
+  * @par     Modification:添加函数，支持********<br>
+  *        History：
+  *          Version：V3.0.1 <br>
+  *          Author：***<br>
+  *          date： 2009/10/16
+  *          Modification:添加函数，支持********<br>
+  *          
+  *          Version：V3.0.0 <br>
+  *          Author：***<br>
+  *          date： 2009/10/16
+  *          Modification:添加函数，支持********<br>
+  *
+  * @attention
+  */
 #ifdef __cplusplus
 extern "C" {
 #endif
