修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -161,12 +161,12 @@ extern "C" {
 
 /* Includes (头文件包含)------------------------------------------------------------------*/
 #include <math.h>       // 引用标准库的头文件
-…
+...
 #include “myheader.h”   // 引用非标准库的头文件
 /* Private types（私有类型） -------------------------------------------------------------*/
 class Box               // 类结构声明
 {
-…
+...
 };
 
 /* Exported types （公开类型）------------------------------------------------------------*/
@@ -175,7 +175,7 @@ class Box               // 类结构声明
 /* Exported macro（公开定义） ------------------------------------------------------------*/
 
 /* Exported functions prototypes（公开函数原型）--------------------------------------------------------*/
-void Function1(…);  // 全局函数声明
+void Function1(void);
 
 #ifdef __cplusplus
 }
@@ -221,7 +221,7 @@ extern "C" {
 /* Private types -------------------------------------------------------------*/
 /* Private constants ---------------------------------------------------------*/
 /* Private variables（私有变量） ---------------------------------------------------------*/
-structINNO_HIF_PlatfromFuncs * g_client_funs;  /**< file attribute */ 
+structINNO_HIF_PlatfromFuncs * g_client_funs;  /**< file attribute */ 
 /* Private macros（私有定义） ------------------------------------------------------------*/
 
 /* Private function prototypes （私有函数原型）-----------------------------------------------*/
@@ -251,9 +251,9 @@ structINNO_HIF_PlatfromFuncs * g_client_funs;  /**< file attribute */
   */
 void * strcpy(char *dest,const char *src);  // 指针仅作输入用，加const
 {
-    赋值语句*********;     /* file attribute 不建议使用 “//xxx”*/ 
-    语句***********;        /* file attribute */ 
-    语句*******;             /* file attribute */ 
+    赋值语句*********;  /* file attribute 不建议使用 “//xxx”*/ 
+    语句***********;  /* file attribute */ 
+    语句*******;  /* file attribute */ 
 }
 ```
 
