修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -291,15 +291,16 @@ BYTE g_GTTranErrorCode;
 |  temp  |  tmp  | 	  | 	   |
 
 ### 反义词组
-
-add / remove begin / end create / destroy
-insert / delete first / last get / release
-increment / decrement put / get
-add / delete lock / unlock open / close
-min / max old / new start / stop
-next / previous source / target show / hide
-send / receive source / destination
-cut / paste up / down
+|    |    |     |
+|--------------------|----------------|-------------------------|
+|  add / remove  | begin/end  |  create / destroy  |
+|  insert / delete  |  first / last  |  get / release  |
+|  increment / decrement  |  put / get  |
+|  add / delete  |  lock / unlock  |  open / close  |
+|  min / max  |  old / new  |  start / stop  |
+|  next / previous  |  source / target  |  show / hide  |
+|  send / receive  |  source / destination  |
+|  cut / paste  |  up / down  |
 示例：
 int min_sum;
 int max_sum;
