修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -304,10 +304,10 @@ BYTE g_GTTranErrorCode;
 |  cut / paste  |  up / down  |
 
 示例：
-int min_sum;
-int max_sum;
-int add_user( BYTE \*user_name );
-int delete_user( BYTE *user_name );
+int min_sum;  
+int max_sum;  
+int add_user( BYTE \*user_name );  
+int delete_user( BYTE \*user_name );  
 
 ## 参考文档
 
