修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -31,6 +31,7 @@ categories:  C/C++
 ### 版权声明
 * 头文件版权声明一致，放在头文件置顶位置
 * 如果提交的代码是在开源软件基础上修改所编写或衍生的代码，请遵循开源许可协议要求，并且已完成履行被修改软件的许可证义务
+* 测试版本号命名”0“开头 V0.x   正式版本非”0“开头  V1.x，版本重大更新才更改开头数字
 
 ## 函数
 * **重复代码应该尽可能提炼成函数**
