修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -135,19 +135,19 @@ categories:  C/C++
 * @file      filename.h
 * @brief   见配置管理计划书
 * @author
-* @version  V3.5.0
+* @version  V1.1
 * @date    2009/10/16
 *
 * @par     Modification:添加函数，支持********<br>
 *        History：
-*          Version：V3.0.1 <br>
+*          Version：V1.0 <br>
 *          Author：***<br>
-*          date： 2009/10/16
+*          date： 2009-10-16
 *          Modification:添加函数，支持********<br>
 *          
-*          Version：V3.0.0 <br>
+*          Version：V0.1 <br>
 *          Author：***<br>
-*          date： 2009/10/16
+*          date： 2009-10-16
 *          Modification:添加函数，支持********<br>
 *
 * @attention
@@ -197,20 +197,15 @@ void Function1(void);
   * @file    filename.c
   * @brief   见配置管理计划书
   * @author  lonlypan
-  * @version  V3.5.0
-  * @date    2009/10/16
+  * @version  V1.1
+  * @date    2009-10-16
   *
-  * @par     Modification:添加函数，支持********<br>
+  * @par     Modification：
   *        History：
-  *          Version：V3.0.1 <br>
-  *          Author：***<br>
-  *          date： 2009/10/16
-  *          Modification:添加函数，支持********<br>
-  *          
-  *          Version：V3.0.0 <br>
-  *          Author：***<br>
-  *          date： 2009/10/16
-  *          Modification:添加函数，支持********<br>
+  *          Version：
+  *          Author：
+  *          date：
+  *          Modification：
   *
   * @attention
   */
