修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -136,19 +136,15 @@ categories:  C/C++
 * @brief   见配置管理计划书
 * @author
 * @version  V1.1
-* @date    2009/10/16
+* @date    2009-10-16
 *
-* @par     Modification:添加函数，支持********<br>
+* @par     Modification：
 *        History：
-*          Version：V1.0 <br>
-*          Author：***<br>
-*          date： 2009-10-16
-*          Modification:添加函数，支持********<br>
-*          
-*          Version：V0.1 <br>
-*          Author：***<br>
-*          date： 2009-10-16
-*          Modification:添加函数，支持********<br>
+*          Version：
+*          Author：
+*          date：
+*          Modification:
+
 *
 * @attention
 */
