修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -133,7 +133,7 @@ categories:  C/C++
 * All rights reserved.
 * 
 * @file      filename.h
-* @brief   见配置管理计划书
+* @brief   
 * @author
 * @version  V1.1
 * @date    2009-10-16
