修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -190,7 +190,7 @@ void Function1(void);
   * All rights reserved.
   * 
   * @file    filename.c
-  * @brief   见配置管理计划书
+  * @brief   
   * @author  lonlypan
   * @version  V1.1
   * @date    2009-10-16
