修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -91,7 +91,7 @@ categories:  C/C++
 * 在程序块的结束行右方加注释标记，以表明某程序块的结束。
 
 ## 排版与格式
-* 程序块采用缩进风格编写，**每级缩进为4格空格**
+* 程序块采用缩进风格编写，**每级缩进为4格空格,不要使用tab键**
 * **相对独立的程序块之间、变量说明之后必须加空行**
 * 一条语句不能过长 如必能拆分需要分行写
 * 一行只写一条语句
@@ -156,6 +156,8 @@ categories:  C/C++
 extern "C" {
 #endif
 
+
+
 /* Includes (头文件包含)------------------------------------------------------------------*/
 #include <math.h>       // 引用标准库的头文件
 ...
@@ -172,14 +174,21 @@ class Box               // 类结构声明
 /* Exported macro（公开定义） ------------------------------------------------------------*/
 
 /* Exported functions prototypes（公开函数原型）--------------------------------------------------------*/
-void Function1(void);
+
+
+
+void Function1(void)
+{
+    ...
+}
+
+
 
 #ifdef __cplusplus
 }
 #endif  /* __cplusplus */
  
 #endif /* __XXX_XX_H */
-
 ```
 
 ### 源文件
@@ -223,9 +232,21 @@ structINNO_HIF_PlatfromFuncs * g_client_funs;  /**< file attribute */
 
 /* User code （代码）-----------------------------------------------------------------*/
 
+
+
+void Function1(void)
+{
+    ...
+}
+
+
+
 #ifdef __cplusplus
 }
 #endif  /* __cplusplus */
+
+
+
 
 ```
 
