--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -46,6 +46,7 @@ categories:  C/C++
 * **不建议使用递归函数调用**
 * 用正确的反义词组命名具有互斥意义的变量或相反动作的函数等
 * 在多重循环中，应将最忙的循环放在最内层
+* **函数名大写开头**
 
 ## 标识符
 * **unix like风格，单词小写，用下划线连接，例如：text_mutex。全局变量大小写混合方式，例如：GetErrMsg**
@@ -58,7 +59,7 @@ categories:  C/C++
 * 不建议使用匈牙利命名法
 * **数值和字符串等等常量的定义，建议采用全大写字母，使用下划线”_“连接**
 * **除了头文件或编译开关等特殊表示定义，宏定义不能使用下划线”_“开头和结尾**
-* 函数参数使用unix like风格
+
 
 ## 变量
 * **一个变量只有一个功能，不要把一个变量用作多种用途**
@@ -79,16 +80,16 @@ categories:  C/C++
 * **常量建议使用const代替宏**
 
 ## 注释
-* 注释格式可被doxygen工具识别，注释内容可以为中文
 * 注释风格要统一，注释内容要清楚、明了、含义准确、防止注释二义性
 * 在代码的功能、意图层次上进行注释，即**注释解释代码难以表达的意图，而不是仅仅重复描述代码**
 * **函数声明处注释函数的功能、性能即用法，包括输入输出函数、函数返回值、可重入的要求等；定义处详细描述函数功能和实现要点，如实现的简要步骤、实现的理由、设计约束等**
 * **对于函数名能够自解释的，可以不写注释。**
 * **全局变量要有详细的注释，包括对其功能、取值范围以及存取时注意事项等的说明**
 * **注释应放在起代码上方相邻位置或右方**
-* 避免在注释中使用缩写，除非时业界通用或子系统内标准化的缩写
+* 避免在注释中使用缩写，除非是业界通用或子系统内标准化的缩写
 * **文件头部要注释，建议注释列出：版权说明、版本号、生成日期、作者姓名、功能说明、与其他文件的关系、修改日志等，头文件的注释还应有函数功能的简要说明。**
 * 在程序块的结束行右方加注释标记，以表明某程序块的结束。
+* 建议使用"/*...*/"进行注释，多行单行都适用
 
 ## 排版与格式
 * 程序块采用缩进风格编写，**每级缩进为4格空格,不要使用tab键**
