修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -205,12 +205,12 @@ void Function1(void)
   * @version V1.1
   * @date    2009-10-16
   *
-  * @par     Modification：
-  *        History：
-  *          Version：
-  *          Author：
-  *          date：
-  *          Modification：
+  * @par     Modification:
+  *        History:
+  *          Version:
+  *          Author:
+  *          date:
+  *          Modification:
   *
   * @attention
   */
@@ -251,16 +251,17 @@ void Function1(void)
 
 ```c 
 /**
-  * @brief Configures the discontinuousmode for the selected ADC regular group channel.
-  * @param(in) ADCx: where x can be 1, 2 or 3 toselect the ADC peripheral.
-  * @param(out)  Number: specifies the discontinuousmode regular channel  count value. This number must bebetween 1 and 8.
-  * @retval None
-  * @par   Modification:修改了********<br>
-  *                       History
-  *          Modified by：***<br>
-  *           Date： 2013-10-10
-  *          Modification:修改了********<br>
-  * 注意注释内容对齐，最少空一格，注释语句首字大写。多个参数另起一行写。
+  * @brief     xxx
+  * @note
+  * @param(in) xxx
+  * @param(out) xxx
+  * @retval     xxx
+  * @par   Modification:
+  *        History:
+  *          Version:
+  *          Author:
+  *          date:
+  *          Modification:
   */
 void * strcpy(char *dest,const char *src);  // 指针仅作输入用，加const
 {
