--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -2,7 +2,7 @@
 layout: post
 title: "编码规范"
 data: 2019-9-3 15:15
-categories:  C/C++
+categories:  C&C++
 ---
 
 ## 总体原则
@@ -101,7 +101,9 @@ categories:  C/C++
 * 注释符(包括„/*‟„//‟„*/‟)与注释内容之间要用一个空格进行分隔
 * **定义函数时左花括号”{“单独占一行，其他的`if`、`while`、`for`等语句建议紧随其后**
 * **组成switch、while、do...while 或for 结构体的语句应该是复合语句。即使该复合语句只包含一条语句也要扩在{}里**
-* **const、virtual、inline、case 等关键字之后至少要留一个空格；函数名之后不要留空格，紧跟左括号‘（’，以与关键字区别；赋值操作符、比较操作符、算术操作符、逻辑操作符、位域操作符，如“=”、“+=” “>=”、“<=”、“+”、“\*”、“%”、“&&”、“\|\|”、“<<”,“^”等二元操作符的前后应当加空格；一元操作符如“!”、“~”、“++”、“--”、“&”（地址运算符）等前后不加空格**
+* **const、virtual、inline、case 等关键字之后至少要留一个空格；函数名之后不要留空格，紧跟左括号‘（’，以与关键字区别**
+* **二元操作符：“=”、“+=” “>=”、“<=”、“+”、“\*”、“%”、“&&”、“\|\|”、“<<”,“^”等的前后应加空格**
+* **一元操作符：“!”、“~”、“++”、“--”、“&”（地址运算符）等前后不加空格**
 
 * 建议函数内部变量定义和函数语句之间空三行
 
