修改文件: _posts/2019-9-3-编码规范.md

--- a/_posts/2019-9-3-编码规范.md
+++ b/_posts/2019-9-3-编码规范.md
@@ -333,3 +333,4 @@ int delete_user( BYTE \*user_name );
 5、[Google 开源项目风格指南 (中文版)](https://zh-google-styleguide.readthedocs.io/en/latest/)  
 
 
+![Diagram](./attachments/1567597798901.drawio.html)
