修改文件: _posts/2019-09-05-kicad-嘉立创SMT生产经验.md

--- a/_posts/2019-09-05-kicad-嘉立创SMT生产经验.md
+++ b/_posts/2019-09-05-kicad-嘉立创SMT生产经验.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "2019-09-05-kicad-嘉立创SMT生产经验"
+title: "KICAD-嘉立创SMT生产经验"
 data: 2019-9-5 17:55
-categories:  HTML&CSS
+categories:  KICAD
 ---
 
 原文：
