修改文件: _posts/2019-9-5-test.md

--- a/_posts/2019-9-5-test.md
+++ b/_posts/2019-9-5-test.md
@@ -6,3 +6,5 @@ categories: HTML&CSS
 ---
 
 ![enter description here](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/2019-9-5-test/1567691312304.png)
+
+![enter description here](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/1567691484198.png)
