修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -19,15 +19,44 @@ categories:  Blog
 
 数据存储直接链接到博客的github的文档库，那么每次保存时，就直接保存在github的文件夹中，直接云存储，随写随看。
 
-图床存储和数据存储一样
+### 数据绑定
 
+1、首先在软件上点击 `小书匠` 图标，点击 `绑定`选项进入操作界面，选择 `数据存储-> github` 进入设置界面（前两个是根据下面的步骤获取填写的，第三个为默认）。这里可以看到，还可以绑定其他第三方，有的直接输入账号密码登录就可以，自己选择吧。这里只谈GitHub。
+![操作与设置界面](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567696458729.png)
+
+
+2、登录自己的github上，并新建一个仓库，也可以使用已经有的。直接点击设置界面的跳转链接跳转到token申请界面或者点击github账户头像 `Settings -> Developer settings -> Personal access tokens -> Generate new token `
+
+按图示设置好，然后下拉网页至最低，点击绿色的`Generate token `按钮。
+![申请token界面](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567695427415.png)
+
+3、设置成功会显示下面界面，记得保存token值，后面还会用到。
+![token值](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567695914382.png)
+
+4、然后就是你的仓库名了，直接复制就好了。
+![仓库名](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567696155700.png)
+
+5、最后按照第一步的设置界面对应位置填写就可以了。
+
+
+### 图床绑定
+
+步骤和上面类似
+![图床绑定](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567696953729.png)
+
+**文件名生成规则：**
+
+按照默认方法，你的图片会被存储在 `
+https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/小书匠/xxx.png`
+
+所以你是可以自己修改在仓库的存储位置的，但{{filename}}就是你的文件名，下面的变量，年月日，文章标题都是你的博客`头数据`，这个需要其他知识了，不做详解。注意 "{{}}"不要丢，“/”表示目录。
+
+我的设置是：
+images/Posts/{{title}}/{{filename}}
 
 ## 问题
-* 当你写好保存后，然后修改了软件端文档名（文件名是软件根据 `title`后的内容生成的），github上的文档名是不会修改的，但你的修改依旧有效（貌似文档名和存储名是分开的）。
+* 当你写好保存后，然后修改了软件端文档名（文件名是软件根据 `title`后的内容生成的,也可在保存时修改），github上的文档名是不会修改的，但你的修改依旧有效（貌似文档名和存储名是分开的）。
 
-* 图片的地址，其实和上面是一个问题，由于我在图片的链接上也加入的 `title`来自动生成与文档同名为的文件夹，以便分类存储图片，但是当我在中途修改文档名后，之前的链接是不变的，后面再继续添加的图片则会保存到你刚新修改的文档同名文件夹下。
-
-一个解决方法就是不保存文档，因为`小书匠`有一个随时存储功能，保证随用随写，随写随走，不用担心数据丢失和断电问题。写完或每天晚上再保存，那时候文档名应该也确定下来了。
 
 
 
