修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -49,13 +49,14 @@ categories:  Blog
 按照默认方法，你的图片会被存储在 `
 https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/小书匠/xxx.png`
 
-所以你是可以自己修改在仓库的存储位置的，但{{filename}}就是你的文件名，下面的变量，年月日，文章标题都是你的博客`头数据`，这个需要其他知识了，不做详解。注意 "{{}}"不要丢，“/”表示目录。
+所以你是可以自己修改在仓库的存储位置的，但{{filename}}就是你的文件名，下面的变量：年月日、文章标题，都是你的博客`头数据`，这个需要其他知识了，不做详解。注意 "{{}}"不要丢，“/”表示目录。
 
 我的设置是：
 images/Posts/{{title}}/{{filename}}
 
 ## 问题
-* 当你写好保存后，然后修改了软件端文档名（文件名是软件根据 `title`后的内容生成的,也可在保存时修改），github上的文档名是不会修改的，但你的修改依旧有效（貌似文档名和存储名是分开的）。
+
+* 当你写好保存后，然后再修改了软件端title文档名（文档名是软件根据 `title`后的内容生成的,也可在保存时修改），github上的文档名是不会修改的，但你的内容修改依旧有效（貌似文档名和存储名是分开的）。
 
 
 
