修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -55,6 +55,9 @@ https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/小书匠/x
 我的设置是：
 images/Posts/{{title}}/{{filename}}
 
+这是我的图片存储位置：
+https://github.com/LonlyPan/LonlyPan.github.io/tree/master/images/Posts
+
 ## 问题
 
 * 当你写好保存后，然后再修改了软件端title文档名（文档名是软件根据 `title`后的内容生成的,也可在保存时修改），github上的文档名是不会修改的，但你的内容修改依旧有效（貌似文档名和存储名是分开的）。
