修改文件: _posts/2019-09-06-Win10新版输入法使用.md

--- a/_posts/2019-09-06-Win10新版输入法使用.md
+++ b/_posts/2019-09-06-Win10新版输入法使用.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:    "2019-09-06-Win10新版输入法使用"
+title:    "Win10新版输入法使用"
 date:   2019-9-6  7:38 
 categories: HTML&CSS
 ---
