--- a/_posts/2019-08-29-电磁阀控制电路.md
+++ b/_posts/2019-08-29-电磁阀控制电路.md
@@ -1,12 +1,13 @@
 ---
 layout: post
-title: "电磁阀控制电路"
+title: "2019-08-29-电磁阀控制电路"
 data: 2019-08-29 14:4
 categories: hardware
 ---
 
 ## 电路图
 
+![电磁阀电路图](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/电磁阀控制电路/电磁阀电路图.png)
 
 ## 参考资料：
 
