修改文件: _posts/2019-09-06-系统自学英语方法.md

--- a/_posts/2019-09-06-系统自学英语方法.md
+++ b/_posts/2019-09-06-系统自学英语方法.md
@@ -1,7 +1,38 @@
 ---
 layout: post
-title: "2019-09-06-系统自学英语方法"
+title: "系统自学英语方法"
 data: 2019-9-6 18:10
 categories:  HTML&CSS
 ---
+
+课时1：确定英语级别
+
+从小学英语者，英语专业者的建议参考意义不大。
+
+A级：发音简单，雷军
+
+B级：发音比较准，词汇匮乏，可以使用简单词，词汇量不大，刘强东
+
+C级：自由发挥，可以通过肢体语言，想到的词流畅沟通，语态语法错误。章子怡
+
+D级：独自演讲，回答提问，没有语法错误，胡歌
+
+E级：中式思维快速造句，马云
+
+F级：五年海外留学背景，吴亦凡
+
+学习基本理论：
+* Input：大量输入
+* i+1：在现在级别上加1
+
+误区：
+* 发音不重要，发音好更愿意表达，有激励性
+* 语法没用：造句基础
+
+刻意练习，1-2小时，不要碎片化学习，不要抠细节（单词细微差别，保持好大方向）
+
+课时2：零基础教材选择、自学方法、注意事项
+
+0基础：中小学学过英语，高考100分以下。最好方法找好老师培训。
+
 
