修改文件: _posts/2019-09-06-系统自学英语方法.md

--- a/_posts/2019-09-06-系统自学英语方法.md
+++ b/_posts/2019-09-06-系统自学英语方法.md
@@ -33,6 +33,10 @@ F级：五年海外留学背景，吴亦凡
 
 课时2：零基础教材选择、自学方法、注意事项
 
-0基础：中小学学过英语，高考100分以下。最好方法找好老师培训。
+**0基础：**
+中小学学过英语，高考100分以下。最好方法找好老师培训。
+材料选择：赖世雄（先学发音-初级-中级），新概念
+不要背诵，一定要读出来，记笔记
+
 
 
