修改文件: _posts/2019-09-06-系统自学英语方法.md

--- a/_posts/2019-09-06-系统自学英语方法.md
+++ b/_posts/2019-09-06-系统自学英语方法.md
@@ -33,10 +33,23 @@ F级：五年海外留学背景，吴亦凡
 
 课时2：零基础教材选择、自学方法、注意事项
 
-**0基础：**
+### A级，0基础
 中小学学过英语，高考100分以下。最好方法找好老师培训。
-材料选择：赖世雄（先学发音-初级-中级），新概念
-不要背诵，一定要读出来，记笔记
+材料选择：赖世雄（先学发音，不学语法-初级-中级），新概念（1-2-3，学语法常见单词+老师）
+不要背诵，一定要读出来，记笔记，模仿，重复
+每天都学，半年以上
+
+### B级
+过了四级，六级，大学生居多
+词汇量3000，日常职场，商业方向英语
+连读句子，连读，缩读
+视频课：成年人的最后一课[英语发音]课
+教程：ESLpod（2-3-4-5-6-1课），笔记默写，跟读
+三个月学习周期
+
+### C级
+6000单词，能看英语电影和书籍，之后不需再学了，要学着用
+教材：EnglishPOD
 
 
 
