--- a/_posts/2019-9-10-串口屏使用笔记.md
+++ b/_posts/2019-9-10-串口屏使用笔记.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "2019-9-10-串口屏使用笔记"
-data: 2019-9-10 11:1
+title: "串口屏使用笔记"
+data: 2019-09-10 11:1
 categories:  HTML&CSS
 ---
 
