修改文件: _posts/2019-09-03-编码规范.md

--- a/_posts/2019-09-03-编码规范.md
+++ b/_posts/2019-09-03-编码规范.md
@@ -5,6 +5,20 @@ data: 2019-9-3 15:15
 categories:  C&C++
 ---
 
+## 自己需要改正的地方
+
+* 查看—**编写示例**
+* 在首次使用前初始化变量
+* unix like风格，单词小写，用下划线连接，
+* 建议使用"/*...*/"进行注释，多行单行都适用
+* 全局变量应增加”g_“前缀，静态增加”s_“前缀，类型名加前缀”P_“，全大写，下划线连接
+* 数值和字符串等等常量的定义，建议采用全大写字母，使用下划线”_“连接
+* 定义函数时左花括号”{“单独占一行，其他的`if`、`while`、`for`等语句建议紧随其后
+* 组成switch、while、do...while 或for 结构体的语句应该是复合语句。即使该复合语句只包含一条语句也要扩在{}里
+* const、virtual、inline、case 等关键字之后至少要留一个空格；函数名之后不要留空格，紧跟左括号‘（’，以与关键字区别
+* 二元操作符：“=”、“+=” “>=”、“<=”、“+”、“\*”、“%”、“&&”、“\|\|”、“<<”,“^”等的前后应加空格
+* 一元操作符：“!”、“~”、“++”、“--”、“&”（地址运算符）等前后不加空格
+
 ## 总体原则
 * 清晰，易于维护、易于重构
 * 简洁，易于理解，并且易于实现
@@ -132,24 +146,25 @@ categories:  C&C++
 
 ```c
 /**
-* Copyright (c) 2001,xxxx Inc
-* All rights reserved.
-* 
-* @file    filename.h
-* @brief   
-* @author  LonlyPan
-* @version V1.1
-* @date    2009-10-16
-*
-* @par     Modification：
-*        History：
-*          Version：
-*          Author：
-*          date：
-*          Modification:
-*          
-* @attention
-*/
+  * Copyright (c) 2019,LonlyPan
+  * All rights reserved.
+  *
+  * @file    lcdmenu.c
+  * @brief   Header file of xxx module
+  * @author  LonlyPan
+  * @version  V0.1
+  * @date    2019-09-04
+  *
+  * @par     Modification:
+  *        History:
+  *          Version:
+  *          Author:
+  *          date:
+  *          Modification:
+  *         
+  *
+  * @attention
+  */
 /* Define to prevent recursive inclusion -------------------------------------*/
 #ifndef __XXX_XX_H
 #define __XXX_XX_H
@@ -161,22 +176,27 @@ extern "C" {
 
 
 
-/* Includes (头文件包含)------------------------------------------------------------------*/
+/* Includes ------------------------------------------------------------------*/
 #include <math.h>       // 引用标准库的头文件
 ...
 #include “myheader.h”   // 引用非标准库的头文件
-/* Private types（私有类型） -------------------------------------------------------------*/
+/* Private types -------------------------------------------------------------*/
 class Box               // 类结构声明
 {
 ...
 };
+/* Private constants ---------------------------------------------------------*/
+#define xxx xx
+/* Private macros ------------------------------------------------------------*/
+#if defined(xxx)
+...
+#endif  /* xxx */
+/* Exported types ------------------------------------------------------------*/
+/* Exported constants --------------------------------------------------------*/
+/* Exported variables --------------------------------------------------------*/
+/* Exported macro ------------------------------------------------------------*/
 
-/* Exported types （公开类型）------------------------------------------------------------*/
-/* Exported constants（公开常量） --------------------------------------------------------*/
-/* Exported variables （公开变量）--------------------------------------------------------*/
-/* Exported macro（公开定义） ------------------------------------------------------------*/
-
-/* Exported functions prototypes（公开函数原型）--------------------------------------------------------*/
+/* Exported functions prototypes --------------------------------------------------------*/
 
 
 
@@ -198,14 +218,14 @@ void Function1(void)
 
 ```c++
 /**
-  * Copyright (c) 2001,xxxx Inc
+  * Copyright (c) 2019,LonlyPan
   * All rights reserved.
-  * 
-  * @file    filename.c
-  * @brief   
+  *
+  * @file    lcdmenu.c
+  * @brief   Screen interface display,data refresh and key value acquisition
   * @author  LonlyPan
-  * @version V1.1
-  * @date    2009-10-16
+  * @version  V0.1
+  * @date    2019-09-04
   *
   * @par     Modification:
   *        History:
@@ -213,27 +233,27 @@ void Function1(void)
   *          Author:
   *          date:
   *          Modification:
+  *         
   *
   * @attention
   */
-  
-  
-/* just for C/C++ Hybrid Programming*/
-#ifdef __cplusplus
-extern "C" {
-#endif
-
 /* Includes ------------------------------------------------------------------*/
-
 /* Private types -------------------------------------------------------------*/
 /* Private constants ---------------------------------------------------------*/
-/* Private variables（私有变量） ---------------------------------------------------------*/
-structINNO_HIF_PlatfromFuncs * g_client_funs;  /**< file attribute */ 
-/* Private macros（私有定义） ------------------------------------------------------------*/
+/* Private variables ---------------------------------------------------------*/
+/* Private macros ------------------------------------------------------------*/
+#if defined(xxx)
+...
+#endif  /* xxx */
+/* Private function prototypes------------------------------------------------*/
 
-/* Private function prototypes （私有函数原型）-----------------------------------------------*/
+/* Exported types ------------------------------------------------------------*/
+/* Exported constants --------------------------------------------------------*/
+/* Exported variables --------------------------------------------------------*/
+/* Exported macro ------------------------------------------------------------*/
 
-/* User code （代码）-----------------------------------------------------------------*/
+/* Exported functions prototypes --------------------------------------------------------*/
+/* User code------------------------------------------------------------------*/
 
 
 
